  it to ensure that the headers can always be used in code which turns on
  -Wundef (or equivalent).
  (David Allsopp and Nicolás Ojeda Bär, review by Nicolás Ojeda Bär and
   Sebastien Hinderer)

- #11289, #11405: fix some leaks on systhread termination
  (Fabrice Buoro, Enguerrand Decorne, Gabriel Scherer,
   review by Xavier Leroy and Florian Angeletti, report by Romain Beauxis)

- #11358, #11379: Refactor the initialization of bytecode threading,
  This avoids a "dangling pointer" warning of GCC 12.1.
  (Xavier Leroy, report by Armaël Guéneau, review by Gabriel Scherer)

- #11387, module type with constraints no longer crash the compiler in presence
  of both shadowing warnings and the `-bin-annot` compiler flag.
  (Florian Angeletti, report by Christophe Raffalli, review by Gabriel Scherer)

- #11392, #11392: assertion failure with -rectypes and external definitions
  (Gabriel Scherer, review by Florian Angeletti, report by Dmitrii Kosarev)

- #11417: Fix regression allowing virtual methods in non-virtual classes.
  (Leo White, review by Florian Angeletti)

OCaml 4.14 maintenance branch
-----------------------------

### Manual and documentation:

- #11045, #11409: document that the array argument to `caml_callbackN`
  must not have been declared by `CAMLlocalN`.
  (Xavier Leroy, report by Stephen Dolan, review by Gabriel Scherer.)


OCaml 4.14.0 (28 March 2022)
----------------------------

### Language features:

- #10462: Add attribute to produce a compiler error for polls.
  (Sadiq Jaffer, review by Mark Shinwell, Stephen Dolan
   and Guillaume Munch-Maccagnoni)

- #10437: Allow explicit binders for type variables.
  (Stephen Dolan, review by Leo White)

- #10441: Remove unnecessary parentheses surrounding immediate objects.
  Allow 'object ... end # f', 'f object ... end', etc.
  (Yan Dong, review by Nicolás Ojeda Bär, Florian Angeletti and Gabriel Scherer)

- #181, #9760, #10740: opt-in tail-modulo-cons (TMC) transformation